add header and sidebar

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,14 @@
-<p class="title">แสตมป์</p>
+<div class="layout">
+	<app-header></app-header>
+	<app-sidebar></app-sidebar>
+	<div class="content">
+		<img class="picture" src="assets/stamp-graduate.jpg" />
+		<div class="quote">
+			สวัสดีครับ <br />
+			ผมชื่อ กิตติพันธ์ นิลประกอบกุล <br />
+			จบการศึกษาจาก ภาควิชาวิศวกรรมคอมพิวเตอร์ <br />
+			คณะวิศวกรรมศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย <br />
+			ขอบคุณทุกคนที่เยี่ยมชมเว็บไซต์นะครับ <br />
+		</div>
+	</div>
+</div>
