--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -14,6 +14,6 @@ html {
 body {
 	box-sizing: border-box;
 
-	background-color: #13c987;
-	color: #008657;
+	background-color: #3498db;
+	color: #ecf0f1;
 }
