[master] add book review

--- a/src/app/landing-page/header/header.component.html
+++ b/src/app/landing-page/header/header.component.html
@@ -4,5 +4,6 @@
 		<div class="navigation-item">Blog</div>
 		<div class="navigation-item">Works</div>
 		<div class="navigation-item">Personal Life</div>
+		<div class="navigation-item">Book Review</div>
 	</div>
 </div>
