--- a/src/app/modules/landing-page/components/banner/banner.component.html
+++ b/src/app/modules/landing-page/components/banner/banner.component.html
@@ -40,9 +40,9 @@
 	<div class="right-panel">
 		<div class="description">
 			<div class="name">Kittiphan Nilprakobkul</div>
-			<div class="description">Software Engineer based in Bangkok, Thailand</div>
+			<div class="description-info">Software Engineer based in Bangkok, Thailand</div>
 		</div>
-		<div class="education-section">
+		<div class="detail education-section">
 			<div class="rect-wrapper">
 				<div class="inner-header-wrapper">
 					<div class="header">
@@ -69,7 +69,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="experience-section">
+		<div class="detail experience-section">
 			<div class="rect-wrapper">
 				<div class="inner-header-wrapper">
 					<div class="header">
