--- a/src/app/modules/landing-page/components/header/header.component.scss
+++ b/src/app/modules/landing-page/components/header/header.component.scss
@@ -1,46 +1,54 @@
 .container {
-    width: 100vw;
-    height: var(--height-header);
+	width: 100vw;
+	height: var(--height-header);
 
-    padding: 60px 100px;
+	padding: 60px 100px;
 
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
+
+	@media only screen and (max-width: 768px) {
+		padding: 10px;
+		height: 60px;
+	}
 }
 
 .logo {
-    height: 70px;
+	height: 70px;
 
-    &:hover {
-        cursor: pointer;
-    }
+	&:hover {
+		cursor: pointer;
+	}
+
+	@media only screen and (max-width: 768px) {
+		height: 50px;
+	}
 }
 
 .nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 1;
 
-    > .nav-item {
-        margin: 10px 20px;
-        font-size: 20px;
+	> .nav-item {
+		margin: 10px 20px;
+		font-size: 20px;
 
-        &:hover {
-            cursor: pointer;
-        }
+		&:hover {
+			cursor: pointer;
+		}
 
-        &:focus {
-            outline: none;
-        }
-    }
+		&:focus {
+			outline: none;
+		}
+	}
 }
 
-
 .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2;
-    background-color: white;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 2;
+	background-color: white;
 }
