add skill section

--- a/src/app/modules/landing-page/components/banner/banner.component.html
+++ b/src/app/modules/landing-page/components/banner/banner.component.html
@@ -3,6 +3,10 @@
 		<div class="profile-img-container">
 			<img class="profile-img" src="assets/profile-img.png" alt="" />
 		</div>
+		<div class="description mobile-description">
+			<div class="name">Kittiphan Nilprakobkul</div>
+			<div class="description-info">Software Engineer based in Bangkok, Thailand</div>
+		</div>
 		<div class="contact">
 			<div class="contact-header header">
 				CONTACT
@@ -36,9 +40,136 @@
 				</div>
 			</div>
 		</div>
+		<div class="tools">
+			<div class="tools-header header">
+				TOOLS
+			</div>
+			<div class="contact-group">
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/html.svg" alt="" />
+					<div class="value">HTML</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/css.svg" alt="" />
+					<div class="value">CSS</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/js.svg" alt="" />
+					<div class="value">Javascript</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/angular.png" alt="" />
+					<div class="value">Angular</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/react.svg" alt="" />
+					<div class="value">React</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/vue.svg" alt="" />
+					<div class="value">Vue</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/polymer.svg" alt="" />
+					<div class="value">Polymer</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/less.svg" alt="" />
+					<div class="value">LESS</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/scss.svg" alt="" />
+					<div class="value">SCSS</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/typescript.svg" alt="" />
+					<div class="value">Typescript</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/redux.svg" alt="" />
+					<div class="value">Redux</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/karma.svg" alt="" />
+					<div class="value">Karma</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/jasmine.svg" alt="" />
+					<div class="value">Jasmine</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/webpack.svg" alt="" />
+					<div class="value">Webpack</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/rxjs.svg" alt="" />
+					<div class="value">RxJS</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/java.svg" alt="" />
+					<div class="value">Java</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/python.svg" alt="" />
+					<div class="value">Python</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/php.svg" alt="" />
+					<div class="value">PHP</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/rxjs.svg" alt="" />
+					<div class="value">NodeJS</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/express.svg" alt="" />
+					<div class="value">Express</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/mysql.svg" alt="" />
+					<div class="value">MySQL</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/firebase.svg" alt="" />
+					<div class="value">Firebase</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/prosgresql.svg" alt="" />
+					<div class="value">ProsgresQL</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/mongodb.svg" alt="" />
+					<div class="value">MongoDB</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/git.svg" alt="" />
+					<div class="value">Git</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/jira.svg" alt="" />
+					<div class="value">Jira</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/confluence.svg" alt="" />
+					<div class="value">Confluence</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/team.svg" alt="" />
+					<div class="value">Microsoft team</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/docker.svg" alt="" />
+					<div class="value">Docker</div>
+				</div>
+				<div class="contact-item">
+					<img class="icon" src="assets/icons/technology/postman.svg" alt="" />
+					<div class="value">Postman</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="right-panel">
-		<div class="description">
+		<div class="description desktop-description">
 			<div class="name">Kittiphan Nilprakobkul</div>
 			<div class="description-info">Software Engineer based in Bangkok, Thailand</div>
 		</div>
@@ -50,20 +181,23 @@
 					</div>
 				</div>
 				<div class="inner-wrapper">
-					<div class="becholor">
-						<div class="name">Chulalongkorn University</div>
-						<div class="degree">B.Eng. in Computer Engineering</div>
-						<div class="elective-course">
-							<div class="label">Elective Courses</div>
-							<div class="subject">- Data sci/eng</div>
-							<div class="subject">- AI</div>
-							<div class="subject">- Cloud computing</div>
-							<div class="subject">- Computer Security</div>
-							<div class="subject">- High Tech Entrepreneur</div>
-						</div>
-						<div class="footer">
+					<div class="becholor content">
+						<div class="top-header">
+							<div class="name">Chulalongkorn University</div>
 							<div class="date-time">Aug 2015 - May 2019</div>
-							<div class="grade">(GPAX 3.06)</div>
+						</div>
+						<div class="degree">B.Eng. in Computer Engineering </div>
+						<div class="elective-course">
+							<div class="subject"><b>GPAX:</b> 3.06</div>
+							<div class="subject">
+								<b>Elective Courses:</b>
+								Data Science and Engineering,
+								Artificial intelligence,
+								Cloud computing (AWS),
+								Computer Security,
+								MERN Stack,
+								High Tech Entrepreneurship
+							</div>
 						</div>
 					</div>
 				</div>
@@ -73,36 +207,112 @@
 			<div class="rect-wrapper">
 				<div class="inner-header-wrapper">
 					<div class="header">
-						PROFESSIONAL EXPERIENCE
+						WORK EXPERIENCE
 					</div>
 				</div>
 				<div class="inner-wrapper">
-					<div class="company">
-						<div class="name">Bank of Ayudhya (Krungsri)</div>
+					<div class="company content">
+						<div class="top-header">
+							<div class="name">Refinitiv Software (Thailand)</div>
+							<div class="date-time">June 2019 - Present</div>
+						</div>
+
 						<div class="elective-course">
 							<div class="label">Descriptions</div>
-							<div class="subject">- </div>
-							<div class="subject">- </div>
-							<div class="subject">- </div>
-							<div class="subject">- </div>
-							<div class="subject">- </div>
-						</div>
-						<div class="footer">
-							<div class="date-time">June 2018 - July 2018</div>
+							<div class="subject"> Develop new user-facing features</div>
+							<div class="subject"> Build reusable code and libraries for future use </div>
+							<div class="subject"> Ensure the technical feasibility of UI/UX designs</div>
+							<div class="subject"> Optimize application for maximum speed and scalability</div>
+							<div class="subject"> Assure that all user input is validated before submitting to backend
+							</div>
+							<div class="subject"> Collaborate with other team members and stakeholders</div>
+							<div class="label">Tools</div>
+							<div class="subject"> HTML, Css, Javascript</div>
+							<div class="subject"> Angular, Typescript, Rxjs </div>
+							<div class="subject"> Polymer1 </div>
+							<div class="subject"> Vainilla Js</div>
+							<div class="subject"> Typescript </div>
+							<div class="subject"> Web worker</div>
+							<div class="subject"> Karma, Jasmine (Testing tools) </div>
+							<div class="subject"> Git (Version control) </div>
+							<div class="subject"> Jira, Confluence, Microsoft team (Collaboration tools)</div>
 						</div>
 					</div>
-					<div class="company">
-						<div class="name">Refinitiv Software (Thailand)</div>
+					<div class="company content">
+						<div class="top-header">
+							<div class="name">Bank of Ayudhya (Krungsri)</div>
+							<div class="date-time">June 2018 - July 2018</div>
+						</div>
 						<div class="elective-course">
 							<div class="label">Descriptions</div>
-							<div class="subject">- </div>
-							<div class="subject">- </div>
-							<div class="subject">- </div>
-							<div class="subject">- </div>
-							<div class="subject">- </div>
+							<div class="subject"> Developed NDID project</div>
+							<div class="subject"> Implement automated test using Robot Framework</div>
+							<div class="label">Tools</div>
+							<div class="subject"> Go</div>
+							<div class="subject"> Robot Framework</div>
+							<div class="subject"> Tendermint </div>
+							<div class="subject"> Docker </div>
+							<div class="subject"> Postman </div>
+							<div class="subject"> Slack </div>
 						</div>
-						<div class="footer">
-							<div class="date-time">June 2019 - Present</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="detail skill-section">
+			<div class="rect-wrapper">
+				<div class="inner-header-wrapper">
+					<div class="header">
+						PROJECTS
+					</div>
+				</div>
+				<div class="inner-wrapper">
+					<div class="project content">
+						<div class="top-header">
+							<div class="name">AQI and PM2.5 one-page Generator for Eastern Thailand</div>
+						</div>
+
+						<div class="elective-course">
+							<div class="label">Descriptions</div>
+							<div class="subject"> Displayed AQI and PM2.5 details for Eastern Thailand</div>
+							<div class="subject"> Added the ability to save as the image</div>
+							<div class="subject"> Added the ability to send the image to LINE via LINE Notify</div>
+							<div class="label">Tools</div>
+							<div class="subject"> Angular2+ including scss, typescript, rxjs </div>
+							<div class="subject"> NodeJS including express </div>
+							<div class="subject"> Firebase (using for storing the data)</div>
+							<div class="subject"> Puppeteer (using for generating the screenshot from backend side</div>
+							<div class="subject"> Cronjobs (using for setting interval to generate the image)</div>
+							<div class="subject"> LINE Notify (using for sending the image to LINE) </div>
+						</div>
+					</div>
+					<div class="project content">
+						<div class="top-header">
+							<div class="name">Play OK generator</div>
+						</div>
+						<div class="elective-course">
+							<div class="label">Descriptions</div>
+							<div class="subject"> Convert Thaichess record from English to Thai</div>
+							<div class="label"> Tools</div>
+							<div class="subject"> Vue</div>
+						</div>
+					</div>
+					<div class="project content">
+						<div class="top-header">
+							<div class="name">Book Recommendation System For Library</div>
+						</div>
+						<div class="elective-course">
+							<div class="label">Descriptions</div>
+							<div class="subject"> Using machine learning (Collabolartive Filtering) to train the data
+							</div>
+							<div class="subject"> Grouping the data and Recommend by faculty</div>
+							<div class="subject"> using NLP to recommend by the name of title</div>
+							<div class="label"> Tools</div>
+							<div class="subject"> React </div>
+							<div class="subject"> NodeJS </div>
+							<div class="subject"> MongoDB </div>
+							<div class="subject"> ProsgresQL </div>
+							<div class="subject"> Python (scikit-learn, pandas) </div>
 						</div>
 					</div>
 				</div>
