--- a/src/app/modules/landing-page/components/header/header.component.scss
+++ b/src/app/modules/landing-page/components/header/header.component.scss
@@ -6,6 +6,7 @@
 
 	display: flex;
 	align-items: center;
+	justify-content: center;
 
 	@media only screen and (max-width: 768px) {
 		padding: 10px;
@@ -51,4 +52,13 @@
 	width: 100%;
 	z-index: 2;
 	background-color: white;
+
+	&.container {
+		height: 50px;
+		padding: 0;
+	}
+
+	> .logo {
+		height: 30px;
+	}
 }
