--- a/src/app/modules/landing-page/components/banner/banner.component.scss
+++ b/src/app/modules/landing-page/components/banner/banner.component.scss
@@ -75,9 +75,10 @@
     grid-gap: 10px;
 
     align-items: center;
+    justify-content: center;
 }
 
-.contact-item {
+.left-panel-item {
     display: contents;
 }
 
@@ -149,8 +150,11 @@
     }
 }
 
-.icon {
+.key {
     margin-right: 10px;
+}
+
+.icon {
     width: 30px;
     height: 30px;
 }
@@ -167,7 +171,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 170px;
+    max-width: 200px;
     padding: 10px;
     cursor: pointer;
     &:hover {
@@ -211,132 +215,123 @@ a {
     text-decoration: none;
 }
 
-.rect-wrapper {
-    background-color: #fd79a8;
+.main-section {
+    width: 100%;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    > .outter-wrapper {
+        background-color: #fd79a8;
 
-.inner-wrapper {
-    background-color: white;
-    width: calc(100% - 20px);
-    margin-bottom: 10px;
-    padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-    > .content {
-        &:not(:last-child) {
-            border-bottom: 1px solid gray;
-            padding-bottom: 10px;
-            margin-bottom: 10px;
-        }
-
-        > .top-header {
+        > .inner-header-wrapper {
             display: flex;
-            justify-content: space-between;
-            > .name {
-                font-size: 20px;
-                font-weight: 600;
-            }
-            > .date-time {
-                font-size: 18px;
-                color: #fd79a8;
+            justify-content: center;
+            align-items: center;
+
+            height: 50px;
+
+            clip-path: polygon(100% 0%, 85% 50%, 100% 100%, 0 100%, 15% 50%, 0 0);
+            background-color: #e84393;
+            width: calc(100% - 100px);
+
+            > .header {
+                color: white;
             }
         }
 
-        > .degree {
-            font-size: 16px;
-        }
+        > .inner-detail-wrapper {
+            background-color: white;
+            width: calc(100% - 20px);
+            margin-bottom: 10px;
+            padding: 20px;
 
-        > .elective-course {
-            margin-top: 10px;
-            > :is(.label, .subject) {
-                font-size: 16px;
-            }
-
-            > .label {
-                font-weight: 600;
-            }
-
-            > .subject {
-                margin-left: 20px;
-
-                &::before {
-                    content: "→";
-                    background-color: #fd79a8;
-                    margin-right: 5px;
+            > .detail {
+                &:not(:last-child) {
+                    border-bottom: 1px solid gray;
+                    padding-bottom: 10px;
+                    margin-bottom: 10px;
                 }
-            }
 
-            > * {
-                margin-top: 5px;
-                margin-bottom: 5px;
-            }
-        }
-    }
+                > .detail-header {
+                    display: flex;
+                    justify-content: space-between;
+                    > .name {
+                        font-size: 20px;
+                        font-weight: 600;
+                    }
+                    > .date-time {
+                        font-size: 18px;
+                        color: #fd79a8;
+                    }
+                }
 
-    @media only screen and (max-width: 768px) {
-        background-color: white;
-        width: calc(100% - 20px);
-        margin-bottom: 10px;
-        padding: 20px;
-
-        > .content {
-            &:not(:last-child) {
-                border-bottom: 1px solid gray;
-                padding-bottom: 10px;
-                margin-bottom: 10px;
-            }
-
-            > .top-header {
-                > .name {
+                > .degree {
                     font-size: 16px;
                 }
-                > .date-time {
-                    font-size: 14px;
+
+                > .main-section-description {
+                    display: flex;
+                    flex-direction: column;
+                    margin-top: 10px;
+                    > :is(.label, .item) {
+                        font-size: 16px;
+                    }
+
+                    > .label {
+                        font-weight: 600;
+                    }
+
+                    > .item {
+                        margin-left: 20px;
+                        &::before {
+                            content: "→";
+                            background-color: #fd79a8;
+                            margin-right: 5px;
+                        }
+                    }
+
+                    > * {
+                        margin-top: 5px;
+                        margin-bottom: 5px;
+                    }
                 }
             }
 
-            > .elective-course {
-                > :is(.label, .subject) {
+            @media only screen and (max-width: 768px) {
+                > .detail {
+                    &:not(:last-child) {
+                        border-bottom: 1px solid gray;
+                        padding-bottom: 10px;
+                        margin-bottom: 10px;
+                    }
+
+                    > .detail-header {
+                        > .name {
+                            font-size: 16px;
+                        }
+                        > .date-time {
+                            font-size: 14px;
+                        }
+                    }
+
+                    > .main-section-description {
+                        > :is(.label, .item) {
+                            font-size: 12px;
+                        }
+                        > .item {
+                            margin-left: 20px;
+                        }
+                    }
+                }
+
+                > .footer {
                     font-size: 12px;
+                    margin-top: 10px;
                 }
-                > .subject {
-                    margin-left: 20px;
-                }
-            }
-
-            > .footer {
-                font-size: 12px;
-                margin-top: 10px;
             }
         }
-    }
-}
-
-.detail {
-    width: 100%;
-}
-
-.inner-header-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    clip-path: polygon(100% 0%, 85% 50%, 100% 100%, 0 100%, 15% 50%, 0 0);
-    height: 50px;
-    background-color: #e84393;
-    width: calc(100% - 100px);
-
-    > .header {
-        color: white;
-    }
-}
-
-.experience-section {
-    .inner-header-wrapper {
-        clip-path: polygon(100% 0%, 90% 50%, 100% 100%, 0 100%, 10% 50%, 0 0);
     }
 }
 
@@ -348,5 +343,6 @@ a {
 .tools {
     > .contact-group {
         display: grid;
+        grid-template-columns: repeat(2, 30px max-content);
     }
 }
